--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -1,13 +1,9 @@
 ---
-title: "Welcome to mizer blog"
+title: "Welcome to the mizer blog"
 description: |
-  Welcome to our new blog, mizer blog. We hope you enjoy 
-  reading what we have to say!
+  and some information about the why and how of this blog.
 author:
-  - name: Nora Jones 
-    url: https://example.com/norajones
-    affiliation: Spacely Sprockets
-    affiliation_url: https://example.com/spacelysprokets
+  - name: Gustav Delius
 date: 08-01-2021
 output:
   distill::distill_article:
@@ -15,12 +11,10 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-
-# Learn more about creating blogs with Distill at:
-# https://rstudio.github.io/distill/blog.html
-
+knitr::opts_chunk$set(echo = TRUE)
 ```
+
+This is still in preparation. Come back next week.
 
 
 
