--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -34,10 +34,10 @@ I like the most is that any code blocks that you include in your post will
 automatically be highlighted and linked to documentation pages. For example
 if your R Markdown document contains a code block with
 
-```
+<pre>
 library(mizer)
 plotlySpectra(NS_params)
-```
+</pre>
 
 then what will be displayed on the blog is
 
@@ -50,6 +50,11 @@ Note how the function names and package names have become links. Click on them
 to see what they do. If you are using packages or functions that your readers
 are not familiar with yet, this autolinking allows them to look them up very
 conveniently.
+
+Unfortunately code highlighting and autolinking currently does not work for
+inline code. This is due to a 
+[known bug in distill](https://github.com/rstudio/distill/issues/186)
+and will hopefully be fixed soon.
 
 The output of the `plotlySpectra()` function is an interactive plot 
 and this got embedded into the blog automatically. Play around
