--- a/_posts/2021-08-08-change-model-parameters-without-using/drawbacks-of-using.Rmd
+++ b/_posts/2021-08-08-change-model-parameters-without-using/drawbacks-of-using.Rmd
@@ -10,6 +10,7 @@ date: 08-08-2021
 twitter:
   site: "@mizer_model"
   creator: "@gustavdelius"
+preview: change.jpg
 output:
   distill::distill_article:
     self_contained: false
